# discordbot

./: .gitignore  PseudoPins.py  README.md  allowed_settings.py  argparse_helpers.py  bot_commands.py  bot_flags.py  bot_helpers.py  ccE_settings.json  default_settings.json  dictionary_searching.py  discordBot.py  discord_bot_dec20.py  func_test.py  latex_to_png.py  plotFunction.py  pyproject.toml  user_configuration.py
discordbot_sloth/: StateLoader.py  __main__.py
latex_out/: Snippet 2022-12-22 at 15.53.57.tex  Snippet 2022-12-22 at 16.38.54.tex  Snippet 2022-12-22 at 16.39.53.tex  Snippet 2022-12-22 at 17.13.15.tex  Snippet 2022-12-22 at 17.59.00.fdb_latexmk  Snippet 2022-12-22 at 17.59.00.tex  Snippet 2022-12-22 at 18.02.47.fdb_latexmk  Snippet 2022-12-22 at 18.02.47.tex  Snippet 2022-12-22 at 18.37.15.fdb_latexmk  Snippet 2022-12-22 at 18.37.15.tex  Snippet 2022-12-23 at 13.13.25.fdb_latexmk  Snippet 2022-12-23 at 13.13.25.tex  Snippet 2022-12-23 at 13.23.26.fdb_latexmk  Snippet 2022-12-23 at 13.23.54.fdb_latexmk  Snippet 2022-12-23 at 13.23.54.tex  Snippet 2022-12-23 at 13.25.08.fdb_latexmk  Snippet 2022-12-23 at 13.25.08.tex  Snippet 2022-12-23 at 13.32.33.fdb_latexmk  Snippet 2022-12-23 at 13.32.33.tex  Snippet 2022-12-23 at 13.33.23.fdb_latexmk  Snippet 2022-12-23 at 13.33.23.tex  Snippet 2022-12-23 at 21.43.36.fdb_latexmk  Snippet 2022-12-23 at 21.43.36.tex  Snippet 2022-12-24 at 23.24.41.fdb_latexmk  Snippet 2022-12-24 at 23.24.41.fls  Snippet 2022-12-24 at 23.24.41.xdv  Snippet 2022-12-24 at 23.27.36.fdb_latexmk  Snippet 2022-12-24 at 23.27.36.fls  (+31 more)
(+56 files in other folders)
